--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
 <body>
     <header>
         <div class="landingcontainer">
-            <div>
-                <p id="landingtitle">Ed Ho</p>
+            <div class="landingdscdiv">
+                <a id="landingtitle" href="index.html" target="_blank">Ed Ho</a>
             </div>
             <div class="landingdscdiv">
-                <p id="landingdsc">
-                    Paper Artist and Engineer
-                </p>
-                <a id="resume" href="resume.pdf" target="_blank">Resume</a>
+                <a id="landingdsc" href="about.html">
+                    about
+                </a>
+                <br>
+                <a id="resume" href="resume.pdf" target="_blank">resume</a>
             </div>
         </div>
     </header>
@@ -37,7 +38,7 @@
                     <p class="projecttitle">
                         Paper Violin
                     </p>
-                    <p class="projectdsc">A playable violin made from paper and popsicle sticks. The aesthetic and structural design are both completely original. </p>
+                    <p class="projectdsc">A playable violin made from paper and popsicle sticks. The aesthetic and structural design are both completely original. The project took around 100 hours to complete. </p>
                 </div>
             </div>
         </div>
@@ -101,7 +102,7 @@
                     <p class="projecttitle">
                         Rotterdam Stationary
                     </p>
-                    <p class="projectdsc">A collection of paper products featuring my rebrand of Rotterdam. The concept of my rebrand was "Open Everything"  which is why the pamphlet and envelope open at the 'TT' in Rotterdam. I also designed a pop up of Rotterdam's most famous brdige the Erasmusbrug. </p>
+                    <p class="projectdsc">A collection of paper products featuring my rebrand of Rotterdam. The concept of my rebrand was "Open Everything"  which is why the pamphlet and envelope open at the 'TT' in Rotterdam. I also designed a pop up of Rotterdam's most famous bridge the Erasmusbrug. </p>
                 </div>
             </div>
         </div>
@@ -112,7 +113,7 @@
                     <p class="projecttitle">
                         Paper Sword
                     </p>
-                    <p class="projectdsc">A replica sword made from paper and popsicle sticks. The sword can withstand hard impacts and all the black is made from black paper. </p>
+                    <p class="projectdsc">A replica sword made from paper and popsicle sticks. The sword can withstand hard impacts and the project took about 80 hours to complete. </p>
                 </div>
             </div>
         </div>
@@ -124,9 +125,17 @@
                     <p class="projecttitle">
                         T Shirt Packaging
                     </p>
-                    <p class="projectdsc">T shirt packaging for my clothing brand.</p>
+                    <p class="projectdsc">T shirt packaging for my clothing brand, baby polar bear.</p>
                 </div>
             </div>
+        </div>
+        <div id="links">
+            <a href="https://www.instagram.com/imedho/" target="_blank">
+                <img id="ig" src="ig.png">
+            </a>
+            <a href="https://www.linkedin.com/in/edward-ho-b9138619a/" target="_blank">
+                <img id="linkedin" src="linkedin.png">
+            </a>
         </div>
     </div>
 </body>
