--- a/about.html
+++ b/about.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="">
 <head>
-    <meta charset="utf-8">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dsa</title>
+    <title>Ed Ho</title>
+    <link href="https://fonts.googleapis.com/css?family=Poppins: 300,400,500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styleabout.css">
 </head>
 
@@ -23,13 +29,19 @@
         </div>
     </header>
     <div id="container">
-        <div>
-            <img src="img/portrait.jpg">
+        <div id="pic">
+            <img id="profilepic" src="img/portrait.jpg">
         </div>
-        <div>
-            <img src="img/portrait.jpg">
+        <div class="dsc"> <p>I’m Ed Ho, a paper artist and engineer that specializes in pop up design. I have been working with paper my whole life and have a passion for designing kinetic paper objects. I can create anything you can imagine out of paper from greeting cards to violins. My goal is to show the world just how amazing an ordinary piece of paper can be.  </p>
         </div>
     </div>
-    
+    <div id="links">
+            <a href="https://www.instagram.com/imedho/" target="_blank">
+                <img id="ig" src="ig.png">
+            </a>
+            <a href="https://www.linkedin.com/in/edward-ho-b9138619a/" target="_blank">
+                <img id="linkedin" src="linkedin.png">
+            </a>
+        </div>
 </body>
 </html>
