--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
             <a href="https://www.instagram.com/imedho/" target="_blank">
                 <img id="ig" src="ig.png">
             </a>
-            <a href="https://www.linkedin.com/in/edward-ho-b9138619a/" target="_blank">
+            <a href="https://www.linkedin.com/in/imedho/" target="_blank">
                 <img id="linkedin" src="linkedin.png">
             </a>
         </div>
