--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="landingcontainer">
             <div class="landingdscdiv">
-                <a id="landingtitle" href="index.html" target="_blank">Ed Ho</a>
+                <a id="landingtitle" href="index.html" >Ed Ho</a>
             </div>
             <div class="landingdscdiv">
                 <a id="landingdsc" href="about.html">
@@ -133,7 +133,7 @@
             <a href="https://www.instagram.com/imedho/" target="_blank">
                 <img id="ig" src="ig.png">
             </a>
-            <a href="https://www.linkedin.com/in/edward-ho-b9138619a/" target="_blank">
+            <a href="https://www.linkedin.com/in/imedho/" target="_blank">
                 <img id="linkedin" src="linkedin.png">
             </a>
         </div>
