--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
         <div id="pic">
             <img id="profilepic" src="img/portrait.jpg">
         </div>
-        <div class="dsc"> <p>I’m Ed Ho, a paper artist and engineer that specializes in pop up design. I have been working with paper my whole life and have a passion for designing kinetic paper objects. I can create anything you can imagine out of paper from greeting cards to violins. My goal is to show the world just how amazing an ordinary piece of paper can be.  </p>
+        <div class="dsc"> <p>I’m Ed Ho, a designer that specializes in paper engineering. I have a passion for working with paper and have been doing so my whole life. I can create anything you can imagine out of paper, from business cards and envelopes to pop up cards and advertising displays.</p>
         </div>
     </div>
     <div id="links">
