--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <p class="projecttitle">
                         Paper Embossment Poster
                     </p>
-                    <p class="projectdsc">A frame and poster of one of my favorite characters. To make the poster I created a system that allows for precise multi-level embossment. 
+                    <p class="projectdsc">A frame and poster of a popular character. To make the poster I created a system that allows for precise multi-level embossment. 
                 </p>
                 </div>
             </div>
@@ -113,7 +113,7 @@
                     <p class="projecttitle">
                         Paper Sword
                     </p>
-                    <p class="projectdsc">A replica sword made from paper and popsicle sticks. The sword can withstand hard impacts and the project took about 80 hours to complete. </p>
+                    <p class="projectdsc">A replica sword made from paper. The sword can withstand hard impacts and the project took about 80 hours to complete. </p>
                 </div>
             </div>
         </div>
