--- a/about.html
+++ b/about.html
@@ -17,7 +17,9 @@
     <header>
         <div class="landingcontainer">
             <div class="landingdscdiv">
-                <a id="landingtitle" href="index.html">Ed Ho</a>
+                <a href="index.html">
+                <img id="imedho" src="img/imedho3.jpg">
+                </a>
             </div>
             <div class="landingdscdiv">
                 <a id="landingdsc" href="about.html">
