--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
 <body>
     <header>
         <div class="landingcontainer">
-            <div class="landingdscdiv">
-                <a id="landingtitle" href="index.html" >Ed Ho</a>
+           <div class="landingdscdiv">
+                <a href="index.html">
+                <img id="imedho" src="img/imedho3.jpg">
+                </a>
             </div>
             <div class="landingdscdiv">
                 <a id="landingdsc" href="about.html">
