--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="landingcontainer">
            <div class="landingdscdiv">
                 <a href="index.html">
-                <img id="imedho" src="img/imedho5.jpg">
+                <img id="imedho" src="img/imedho.png">
                 </a>
             </div>
             <div class="landingdscdiv">
@@ -84,7 +84,7 @@
        </div>
        <div class="projectdsccontainer">
                     <p class="projecttitle">
-                       Spirited Aaway Bridge Pop Up Book
+                       Spirited Away Bridge Pop Up Book
                     </p>
                     <p class="projectdsc">Hard cover pop up book of the bridge from the popular animated movie Spirited Away. The pop up features a collapsing spine, custom embossing, and the bridge was painted by hand.</p>
         </div>
