--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <div class="landingcontainer">
             <div class="landingdscdiv">
                 <a href="index.html">
-                <img id="imedho" src="img/imedho5.jpg">
+                <img id="imedho" src="img/imedho.png">
                 </a>
             </div>
             <div class="landingdscdiv">
