--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header>
         <div class="landingcontainer">
            <div class="landingdscdiv">
-                <a href="index.html">
+                <a href="imedho.com">
                 <img id="imedho" src="img/imedho.png">
                 </a>
             </div>
