--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <header>
         <div class="landingcontainer">
             <div class="landingdscdiv">
-                <a href="imedho.com">
+                <a href="index.html">
                 <img id="imedho" src="img/imedho.png">
                 </a>
             </div>
