--- a/index.html
+++ b/index.html
@@ -262,6 +262,36 @@ Feel Like You’re Flying  </p>
                     <p class="projectdsc">A pop up microphone incorporated into a book cover. The book is a handbound collection of interviews. The book also features custom embossment on the front and back cover.</p>
         </div>
        
+       <div class="slick">
+           <div>
+               <img src="img/post1.jpg" alt="" class="projectimg">
+           </div>
+           <div>
+               <img src="img/post2.jpg" alt="" class="projectimg">
+           </div>
+           <div>
+               <img src="img/post3.jpg" alt="" class="projectimg">
+           </div>
+           <div>
+               <img src="img/post4.jpg" alt="" class="projectimg">
+           </div>
+           <div>
+               <img src="img/post5.jpg" alt="" class="projectimg">
+           </div>
+           <div>
+               <img src="img/post6.jpg" alt="" class="projectimg">
+           </div>
+           <div>
+               <img src="img/post7.jpg" alt="" class="projectimg">
+           </div>
+       </div>
+       <div class="projectdsccontainer">
+                    <p class="projecttitle">
+                        Embossed Postcards
+                    </p>
+                    <p class="projectdsc">A series of embossed postcards. The post cards are all hand embossed onto art board. 
+                </p>
+                </div>
        
        <div class="slick">
            <div>
