--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <p class="projecttitle">
                 Paper Violin
             </p>
-            <p class="projectdsc">A playable violin made from paper and popsicle sticks. The project was an independent study completed at the University of Connecticut. I created the aesthetic and structural design of the violin and constructed it throughout the Fall 2019 Semester. The project took around 200 hours to complete. </p>
+            <p class="projectdsc">A playable violin made from paper and popsicle sticks. The project was an independent study completed at the University of Connecticut. I created the aesthetic and structural design of the violin and constructed it throughout the Fall 2018 Semester. The project took around 200 hours to complete. </p>
         </div>
        
         <div class="slick">
@@ -226,7 +226,7 @@
             <p class="projecttitle">
                 Adidas Pop Up
             </p>
-            <p class="projectdsc">A multilayered pop up of the adidas logo. The pop up features a minimal style and exhibits a complex use of multiple floating planes.</p>
+            <p class="projectdsc">A multilayered pop up of the adidas logo. The pop up features a minimal style and exhibits complex use of multiple floating planes.</p>
         </div>
 
        <!--
@@ -311,7 +311,7 @@
             <p class="projecttitle">
                 Embossed Postcards
             </p>
-            <p class="projectdsc">A series of embossed postcards. The post cards are all hand embossed onto art board.
+            <p class="projectdsc">A series of hand embossed postcards.
             </p>
         </div>
 
@@ -329,7 +329,7 @@
             <p class="projecttitle">
                 Pop Up Emoji
             </p>
-            <p class="projectdsc">A multilayered pop up of the recently popular pleading emoji.</p>
+            <p class="projectdsc">A multi-layered pop up of the recently popular pleading emoji.</p>
         </div>
 
 
