--- a/about.html
+++ b/about.html
@@ -1,49 +1,64 @@
 <!DOCTYPE html>
 <html lang="">
-<head>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ed Ho</title>
-    <link href="https://fonts.googleapis.com/css?family=Poppins: 300,400,500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="styleabout.css">
-</head>
+  <head>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins: 300,400,500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styleabout.css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="landingcontainer">
-            <div class="landingdscdiv">
-                <a href="index.html">
-                <img id="imedho" src="img/imedho.png">
-                </a>
-            </div>
-            <div class="landingdscdiv">
-                <a id="landingdsc" href="about.html">
-                    about
-                </a>
-                <br>
-                <a id="resume" href="resume.pdf" target="_blank">resume</a>
-            </div>
+      <div class="landingcontainer">
+        <div class="landingdscdiv">
+          <a href="index.html">
+            <img id="imedho" src="img/imedho.png" />
+          </a>
         </div>
+        <div class="landingdscdiv">
+          <a id="landingdsc" href="about.html"> about </a>
+          <br />
+          <a id="resume" href="resume.pdf" target="_blank">resume</a>
+        </div>
+      </div>
     </header>
     <div id="container">
-        <div id="pic">
-            <img id="profilepic" src="img/portrait.jpg">
-        </div>
-        <div class="dsc"> <p>I’m Ed Ho, a designer that specializes in paper engineering. I have a passion for working with paper and have been doing so my whole life. I can create anything you can imagine out of paper, from business cards and envelopes to pop up cards and advertising displays.</p>
-        </div>
+      <div id="pic">
+        <img id="profilepic" src="img/portrait.jpg" />
+      </div>
+      <div class="dsc">
+        <p>
+          I’m Ed Ho, a designer that specializes in pop ups and paper
+          engineering. I have a passion for working with paper and have been
+          doing so my whole life. <br />
+          <br />
+          Paper design is so amazing to me because it's like creating something
+          from nothing. Taking an ordinary piece of paper and making it into
+          something no one thought was possible is my way of bringing a little
+          more magic into the world.
+          <br />
+          <br />
+          I want to create beautiful paper designs that can inspire and bring
+          joy to anyone who sees them.
+        </p>
+      </div>
     </div>
     <div id="links">
-            <a href="https://www.instagram.com/imedho/" target="_blank">
-                <img id="ig" src="ig.png">
-            </a>
-            <a href="https://www.linkedin.com/in/imedho/" target="_blank">
-                <img id="linkedin" src="linkedin.png">
-            </a>
-        </div>
-</body>
+      <a href="https://www.instagram.com/imedho/" target="_blank">
+        <img id="ig" src="ig.png" />
+      </a>
+      <a href="https://www.linkedin.com/in/imedho/" target="_blank">
+        <img id="linkedin" src="linkedin.png" />
+      </a>
+    </div>
+  </body>
 </html>
