--- a/index.html
+++ b/index.html
@@ -67,7 +67,28 @@
                 <a href="graphic_design.html">graphic design</a>
             </div>
           -->
-
+      <div class="slick">
+        <div>
+          <img src="img/ab1.gif" alt="" class="projectimg" />
+        </div>
+        <div>
+          <img src="img/ab2.gif" alt="" class="projectimg" />
+        </div>
+        <div>
+          <img src="img/ab3.gif" alt="" class="projectimg" />
+        </div>
+        <div>
+          <img src="img/ab4.gif" alt="" class="projectimg" />
+        </div>
+      </div>
+      <div class="projectdsccontainer">
+        <p class="projecttitle">Air Balloon</p>
+        <p class="projectdsc">
+          A tea light holder that uses heat to spin a paper hot air balloon. The
+          stand can be quickly assembled and has a cavity which securely holds
+          standard size tea lights.
+        </p>
+      </div>
       <div class="slick">
         <div>
           <img src="img/planeg.gif" alt="" class="projectimg" />
