--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
       <div class="landingcontainer">
         <div class="landingdscdiv">
           <a href="index.html">
-            <img id="imedho" src="img/imedho.png" />
+            <img id="imedho" src="img/flywithme.svg" />
           </a>
         </div>
         <div class="landingdscdiv">
@@ -37,18 +37,15 @@
       </div>
       <div class="dsc">
         <p>
-          I’m Ed Ho, a designer that specializes in pop ups and paper
-          engineering. I have a passion for working with paper and have been
-          doing so my whole life. <br />
+          I’m Ed Ho, a designer with a strong passion for pop ups and paper
+          engineering.<br />
           <br />
-          Paper design is so amazing to me because it's like creating something
-          from nothing. Taking an ordinary piece of paper and making it into
-          something no one thought was possible is my way of bringing a little
-          more magic into the world.
+          I grew up creating with paper and have always loved the process of
+          turning something ordinary into something amazing.
           <br />
           <br />
-          I want to create beautiful paper designs that can inspire and bring
-          joy to anyone who sees them.
+          My goal is to inspire others and bring more happiness into the world
+          through paper design.
         </p>
       </div>
     </div>
