--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="landingcontainer">
         <div class="landingdscdiv">
           <a href="index.html">
-            <img id="imedho" src="img/imedho.png" />
+            <img id="imedho" src="img/flywithme.svg" />
           </a>
         </div>
         <div class="landingdscdiv">
