--- a/about.html
+++ b/about.html
@@ -50,11 +50,15 @@
       </div>
     </div>
     <div id="links">
-      <a href="https://www.instagram.com/imedho/" target="_blank">
-        <img id="ig" src="ig.png" />
+      <a
+        id="ig"
+        href="https://www.instagram.com/flywithmedesign/"
+        target="_blank"
+      >
+        <img src="ig.svg" />
       </a>
-      <a href="https://www.linkedin.com/in/imedho/" target="_blank">
-        <img id="linkedin" src="linkedin.png" />
+      <a id="ln" href="https://www.linkedin.com/in/imedho/" target="_blank">
+        <img src="ln.svg" />
       </a>
     </div>
   </body>
